bk_ida/gccida/g2/final
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2155:4: error: expected ';' after expression
rtx v11; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2155:5: error: use of undeclared identifier 'v11'; did you mean 'v10'?
rtx v11; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2154:7: note: 'v10' declared here
char *v10; // rcx 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2157:4: error: expected ';' after expression
rtx i; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2157:5: error: use of undeclared identifier 'i'
rtx i; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2175:1: error: use of undeclared identifier 'v11'
v11 = first; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2180:17: error: use of undeclared identifier 'v11'
if ( *( _WORD *)v11 == 37 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2182:7: error: use of undeclared identifier 'v11'
v12 = v11[2].fld[0].rtint; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2186:1: error: use of undeclared identifier 'v11'
v11 = v11[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2186:7: error: use of undeclared identifier 'v11'
v11 = v11[1].fld[0].rtx; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2187:7: error: use of undeclared identifier 'v11'
if ( !v11 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2191:1: error: use of undeclared identifier 'v11'
v11 = v11[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2191:7: error: use of undeclared identifier 'v11'
v11 = v11[1].fld[0].rtx; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2193:9: error: use of undeclared identifier 'v11'
while ( v11 ); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2201:7: error: use of undeclared identifier 'i'
for ( i = first[1].fld[0].rtx; i; i = final_scan_insn( i, file, optimize, prescan, 0) ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2201:32: error: use of undeclared identifier 'i'
for ( i = first[1].fld[0].rtx; i; i = final_scan_insn( i, file, optimize, prescan, 0) ) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2201:56: error: use of undeclared identifier 'i'
for ( i = first[1].fld[0].rtx; i; i = final_scan_insn( i, file, optimize, prescan, 0) ) 
                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2201:35: error: use of undeclared identifier 'i'
for ( i = first[1].fld[0].rtx; i; i = final_scan_insn( i, file, optimize, prescan, 0) ) 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/final.c:2203:10: error: use of undeclared identifier 'i'
rtuint = i->fld[0].rtuint; 
         ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final/src/obj/final.o] Error 1
